--- a/src/assets/css/global/index.css
+++ b/src/assets/css/global/index.css
@@ -186,6 +186,12 @@ p {
   .login-wrapper {
    padding: 1.8rem 1.5rem 0 1.5rem;
    }
+  .lawyer-container {
+    animation: main 1s;
+    max-width: 970px;
+    padding: 50px 40px;
+    margin: 380px auto 40px auto;
+  }
 }
 
 @media (max-width: 759px) {
@@ -232,6 +238,12 @@ p {
   .login-wrapper {
     padding: 18vh 0.5em 0 0.5rem;
    }
+  .lawyer-container {
+    animation: main 1s;
+    max-width: 970px;
+    padding: 50px 40px;
+    margin: 380px auto 40px auto;
+  }
 }
 
 ::-webkit-scrollbar {
