--- a/src/assets/css/global/index.css
+++ b/src/assets/css/global/index.css
@@ -324,7 +324,7 @@ p {
   resize: none;
   width: 100%;
   border-radius: 4px;
-  background: url(https://static.talkxj.com/config/commentBack.webp) 100% 100% no-repeat;
+  /*background: url(https://legaladvice.oss-cn-beijing.aliyuncs.com/page/e8aaf18f-f07e-4280-9237-3c72f223762b.jpg) 100% 100% no-repeat;*/
 }
 
 .upload-btn{
